@@ -37,6 +37,7 @@ Revision 4.2.6rc0
 - Passing request details to access control callback at CommandResponder
   reworked towards more robust and simple design with the execution observer
   facility.
+- MIB instrumentation example improved to cover table index building facility.
 - Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
   cope with missing bits identifieirs at prettyPrint().
 - Memory leak fixed in CommandForwarder examples.
